add sh calculate

--- a/test1/case2/CMakeLists.txt
+++ b/test1/case2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(case2 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(case2 main.c CosFunc.c CosFunc.h)
+add_executable(case2 main.c CosFunc.c CosFunc.h ShFunc.c ShFunc.h)
